Delphi CEで自作コンポーネントのインストール問題があり変更 最初のフォーム表示が予定と異なっていたのがなおる TrayIconコンポーネントに問題がありそうでポップアップメニューが消えてしまう問題がある

--- a/ClipboardWatcher.dproj
+++ b/ClipboardWatcher.dproj
@@ -130,6 +130,7 @@
             <Form>OKRightDlg</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="CBWatch.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
